# PhallaxAI

./: README.md  app.config.ts  bun.lockb  package.json
.github/ISSUE_TEMPLATE/: bug_report.md
src/: app.tsx  state.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20240821003932_history_table.sql  20240821003941_assistants_table.sql  20240821003946_configs_table.sql
src-tauri/src/: lib.rs
src-tauri/src/commands/: assistant.rs  crud.rs  database.rs  history.rs
src-tauri/src/database/: assistants.rs  configs.rs  history.rs  schemas.rs
src-tauri/src/ollama/: ai.rs  history.rs
src/api/: assistant.ts  database.ts
src/components/chat/: input.tsx  window.tsx
src/components/error/: error.tsx
src/components/messages/: bot.tsx  user.tsx
src/components/ui/: button.tsx  textarea.tsx  textfield.tsx  toast.tsx
src/routes/: index.tsx
