[package]
name = "app"
version = "0.1.0"
description = "An Ollama frontend"
authors = ["Joshua Scina"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.2", features = [] }
tokio = { version = "1.39.3", features = ["full"] }
lazy_static = "1.5.0"
uuid = "1.10.0"
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ollama-rs = { version = "0.2.0", features = [
  "function-calling",
  "chat-history",
] }
tauri-plugin-fs = "2.0.0-rc"
sqlx = { version = "0.8.0", features = ["sqlite"] }
